@@ -279,6 +279,8 @@
           www/vicidial/list_split.php,
           www/vicidial/non_agent_api.php: Added custom_fields_copy option to
             add_list function; Added use of admin_web_directory system setting.
+    * Add upstream Rev. 3121:
+      - Update: bin/AST_VDhopper.pl: Allow for single-quotes in state field.
     * Change next release to 3.0.1.
 
 2.26.29
